public/stylesheets/scss/app.scss
/* ... */
/* CLASS LISTINGS */
.component_title {
  clear: both;
  font-weight: bold;
  width: 100%; }

#search_spinner {
  img {
    margin-right: 20px; } }

#search-investigations {
  background: white;
  border: solid 1px #dddddd;
  margin-bottom: 20px;
  padding: 10px;
  select {
    margin-left: 0; }
  table {
    margin: 0;
    padding: 0; } }

#element_nav_menu, #page_nav_menu, #section_nav_menu {
  display: none; }

ul.quiet_list {
  margin-left: 0;
  padding-left: 0;
  list-style: none;
  .item .action_menu {
    padding: 5px 10px; }
  .item .action_menu .action_menu_header_left a {
    color: black; }
  .item .tiny .menu_h {
    margin: 0 0 5px 10px;
    padding: 5px 0;
    li {}
    list-style: none;
    margin-right: 15px; } }

.menu_h {
  margin: 0 0 5px 10px;
  padding: 5px 0;
  li {
    list-style: none;
    margin-right: 15px; } }

.tiny {
  margin: 0px 0px 5px 5px;
  font-size: 0.85em;
  li {
    margin-right: 5px; }
  p {
    margin: 0.2em; } }
  .help {
    font-weight: normal;
    // text-decoration: underline;
    color: #57a19f;
    // color: blue;
    // cursor: pointer;
    font-size: 9pt;
  }
.data_collector {
  display: block;
  width: 100%;
  height: 400px; }
#school_toggle_write_in {
  cursor: pointer;
}
#school_show_select {
  cursor: pointer;
}

/* INVESTIGATIONS PREVIEW LIST */
.preview_list {
  list-style: none;
  padding: 0;
  li {
    background: white;
    border-bottom: dotted 1px #cccccc;
    min-height: 45px;
    padding: 15px 10px 10px;
    a {
      padding-left: 30px; }
    .investigation_preview {
      a {
        padding-left: 0; } }
    .details {
      padding-left: 25px; } }
  li.even {
    background: #f9f9f6; } }

/* FOOTER */
#footer {
  background: transparent url(/images/new/bg-footer.png) center bottom no-repeat;
  clear: both;
  height: 235px;
  min-height: 235px;
  position: relative;
  p {
    color: #a0a0a0;
    font: 0.9em georgia, times, serif;
    margin-bottom: 0;
    margin-left: 300px; }
  .footer-inner {
    bottom: 17px;
    display: block;
    left: -40px;
    margin: 0;
    position: absolute;
    width: 800px; }
  #share-it {
    float: right;
    margin: -26px 123px 0 0;
    width: 125px; } }

#under_footer {
  background-color: #fee9aa;
  text-align: center;
  margin: 5px 0;
  padding: 2px 0; }

.attached_file {
  border: 1px solid;
  margin: 2px;
  padding: 5px; }

.button {
  text-transform: capitalize;
  background: transparent;
  a, a:visited, a:active {
    font-weight: normal;
    text-align: center;
    padding: 3px 7px;
    /* CSS3 */
    border-radius: 8px;
    -moz-border-radius: 8px;
    -webkit-border-radius: 8px;
    background-color: #bcd6ea;
    color: #111111; }
  a:hover {
    background-color: #111111;
    color: #bcd6ea; } }

.teacher_only {
  background-color: #eedddd !important; }

.form_like {
  fieldset {
    border: solid 1px #cccccc;
    clear: both !important;
    color: #222222;
    display: block !important;
    font-size: 1em;
    margin-bottom: 0.5em;
    padding: 0 10px 10px;
    legend {
      background: transparent;
      display: block;
      font-weight: bold;
      margin-left: 1em 0 0 10px;
      padding: 5px !important; } } }

.item_collection * {
  li.menu {list-style-type: none;}
}

.inner_page * {
  .page {
      border: 1px solid; 
      margin: 2px;
  }
  .content {
    padding-bottom: 0.5em;
  }
}

/* CSS for Manage Classes Page*/

.invisible_modal
{
     display: none;
     position: absolute;
     left: 0px;
     top: 0px;
     width:100%;
     height:100%;
     text-align:center;
     z-index: 1000;
     background-color:#FFFFFF;
     opacity: 0.5;
     filter: alpha(opacity=50);
     cursor: wait;
     zoom: 1;
}

.invisible_modal.show
{
  display: block;
}

.total_Class_summary
{
    font-weight:bold;
    font-size: 1.3em;
    color: #000000;
    display:inline;
    float: left;
    padding-top: 20px;
}

.class_list_element
{
  div
  {
    float: left;
  }
  table
  {
    margin: 0;
  }
  a{
    margin-top: 5px;
  }
  input
  {
    display: inline;
    width: 50px;
    margin: 6px;
    border: 0;
  }
  label
  {
    font-weight:bold;
    font-size: 1.3em;
    color: #000000;
    display:inline;
    text-transform: none;
  }
  
}


.class_list_element_container
{
  width:500px;
  table
  {
    td
    {
      vertical-align: middle;
    }
  }
}

.manage_classes_panel
{
  #sortable li label{ 
    margin: 0; 
    padding: 3px 0px 0px 0px ;
    cursor:move ;
    height:auto;
    }
    #sortable { list-style-type: none; margin: 0; padding: 0;width:auto; }
    #sortable td {vertical-align:middle; }
}

.right_float
{
  float: right;
  bottom: 0;
  input {
  border: 0 solid #f3951d;
  color: white;
  display: inline;
  font: 12px / 1 Arial, Helvetica, sans-serif;
  padding: 4px 5px;
  /* CSS 3 */
  background: -webkit-gradient(linear, left top, left bottom, from(#f3951d), to(#dd6e0d));
  background: -moz-linear-gradient(top, #f3951d, #dd6e0d);
  _background: #f6f2e2;
  border-radius: 12px;
  /* Opera 10.5, IE 9 */
  -moz-border-radius: 12px;
  /* FF1+ */
  -webkit-border-radius: 12px;
  /* Saf3+, Chrome */ }
}

.bottom_options
{
  button
  {
    display: inline;
  }
}

.clear_both
{
  clear:both;
}

.main_manage_classes_container{padding:10px 10px 10px 10px;background-color:White;-moz-border-radius: 20px; -webkit-border-radius: 20px;-khtml-border-radius: 20px;border-radius: 20px}

.popup_content
{
  padding: 20px 20px 20px 20px;
  textarea
  {
    width: 350px;
  }
  
  td
  {
    padding-top: 10px; 
  }
}

/* ---- END CSS for Manage Classes Page ------*/



/* ---- CSS for Student roster page -----*/

table.teacher_class_table th, table.teacher_class_table td
{
    border: 1px solid #242323;
    padding-left:10px;
    /*text-align: center !important; /*Forcely added !important as in Action_menu_tab.scss Align Left is marked !important*/
   
   .change_password
  {
    padding-left:20px;
  }
  
  .remove_student
  {
    padding-left:20px;
  }
}

.floatR
{
  float : right;
}
/* ... */

